[package]
name = "haspid-exe"
version = "0.1.0"
edition = "2021"
default-run = "haspid-exe"

[dependencies]
widestring = "0.5"
windows = { version = "0.36", features = [
	"alloc",
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Diagnostics_ToolHelp",
	"Win32_System_LibraryLoader",
	"Win32_System_Memory"
] }
anyhow = "1.0"
u16cstr = "0.3"
haspid-lib = { path = "../haspid-lib" }